examples/error-codes/violates-constraint/nonfatal/CV-CERL5-bad-static.output
CV-CERL5-bad-static.c:5:2: error: Incompatible types in relational expression.
  Constraint violation (CV-CERL5). See C11 sec. 6.5.8:2
