examples/error-codes/violates-constraint/nonfatal/CV-CERL5-bad-static.c
// Copyright (c) 2015 Runtime Verification, Inc. (RV-Match team). All Rights Reserved.

int main(void){
	return (void*)0 <= (1 < 1);
}
